force-app/main/default/objects/ArdiraSurvey__Survey__c/ArdiraSurvey__Survey__c.object-meta.xml
<CustomObject>
    <description>The object stores the information about a survey.</description>
    <label>Ardira Survey</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ardira Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>