force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Ans_Choice_Button_Hover_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Ans_Choice_Button_Hover_Color__c</fullName>
    <description>Use this option to change the hover color of choice based questions. Use hex or RGB color code as a value.</description>
    <inlineHelpText>Answer Choice Button Hover Color allows you to change the hover color of choice-based questions in the survey responder interface. You can use a hex or RGB color code as a value to define the desired hover color for the answer choice buttons. When a participant hovers over a choice option, the button will change its color according to the specified hover color, providing visual feedback and enhancing the interactive experience during the survey response process.</inlineHelpText>
    <label>Answer Choice Button Hover Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>