force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Answer_Choice_Button_Bg_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Answer_Choice_Button_Bg_Color__c</fullName>
    <description>Use this option to change the background color of choice based questions. Use hex or RGB color code as a value.</description>
    <inlineHelpText>Answer Choice Button Background Color allows you to change the background color of choice-based questions in the survey responder interface. You can use a hex or RGB color code as a value to define the desired background color for the answer choice buttons. By customizing this option, you can create a visually appealing and consistent design for the survey interface, enhancing the participant&apos;s experience during the survey response process.</inlineHelpText>
    <label>Answer Choice Button Background Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>