force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Answer_Text_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Answer_Text_Border_Color__c</fullName>
    <description>Use this option to change the border color of choice based questions. Use hex or RGB color code as a value.</description>
    <inlineHelpText>Answer Text Border Color allows you to customize the border color of choice-based questions in the survey responder interface. You can use either a hex color code (e.g., #RRGGBB) or an RGB color code (e.g., rgb(R, G, B)) as the value.</inlineHelpText>
    <label>Answer Text Border Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>