force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Answer_Text_Border_Width__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Answer_Text_Border_Width__c</fullName>
    <description>Use this option to change the border width of choice based questions. Use the number as an input value. E.g: 1 or 2 etc.</description>
    <inlineHelpText>Answer Text Border Width allows you to specify the border width for choice-based questions in the survey responder interface. You can enter a numerical value to determine the thickness of the border surrounding the answer choices. For example, entering &apos;1&apos; will create a thin border, while entering &apos;2&apos; will create a thicker border.</inlineHelpText>
    <label>Answer Text Border Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>