force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Element_Focused_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Element_Focused_Color__c</fullName>
    <description>Use this option to select an element keyboard focus color.</description>
    <inlineHelpText>Keyboard Focus Color allows you to choose a color that will be applied to elements when they receive keyboard focus in the survey responder interface. This helps to visually highlight the currently focused element, providing better accessibility and usability for participants using keyboard navigation.</inlineHelpText>
    <label>Keyboard Focus Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>