force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Navigation_Button_Hover__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Navigation_Button_Hover__c</fullName>
    <description>Use this option to change the all navigation button hover style. Use standard CSS style. e.g. background-color: #445566;border-radius:20px;border: 3px solid #ff0000.</description>
    <inlineHelpText>Button Hover Style allows you to customize the visual appearance of the navigation buttons when they are being hovered over by the user in the survey responder interface. You can use this option to define CSS styles. e.g. background-color: #445566;border-radius:20px;border: 3px solid #ff0000.</inlineHelpText>
    <label>Button Hover Style</label>
    <type>TextArea</type>
</CustomField>