force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Navigation_Next_Button_Style__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Navigation_Next_Button_Style__c</fullName>
    <description>Use this option to change the next button style. Use standard CSS style. e.g. background-color: #445566;border-radius:20px;border: 3px solid #ff0000.</description>
    <inlineHelpText>Next Button Style allows you to customize the visual appearance of the next button in the survey responder interface using custom CSS styles. e.g. background-color: #445566;border-radius:20px;border: 3px solid #ff0000.</inlineHelpText>
    <label>Next Button Style</label>
    <type>TextArea</type>
</CustomField>