force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Notification_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Notification_Configuration__c</fullName>
    <description>JSON string representing the advanced notification configuration.</description>
    <inlineHelpText>JSON string representing the advanced notification configuration.</inlineHelpText>
    <label>Advanced Notification Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>