force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Question_Element_Style__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Question_Element_Style__c</fullName>
    <description>Use this option to change the question element style of survey responder interface. Use standard CSS style. e.g. color: #445566;font-size: 20px.</description>
    <inlineHelpText>Question Element Style allows you to customize the visual style of the question elements in the survey responder interface. You can use this option to apply CSS styles. e.g. color: #445566;font-size: 20px.</inlineHelpText>
    <label>Question Element Style</label>
    <type>TextArea</type>
</CustomField>