force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Advanced_Survey_Answer_Text_Style__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Advanced_Survey_Answer_Text_Style__c</fullName>
    <description>Use this option to change the answer element style of survey responder interface. Use standard CSS style. e.g. color: #445566;font-size: 20px.</description>
    <inlineHelpText>Answer Element Style allows you to customize the style of the answer elements in the survey responder interface. You can use standard CSS styles. e.g. color: #445566;font-size: 20px.</inlineHelpText>
    <label>Answer Element Style</label>
    <type>TextArea</type>
</CustomField>