force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allow_Jump_to_Section__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_Jump_to_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, view response will display a ‘Jump to Section” link with each section title. Clicking the link will take the user to the survey responder interface with focus into the section.</description>
    <inlineHelpText>When enabled, the preview response interface will display &quot;Jump to Section&quot; links next to each section title. Participants can click on these links to quickly navigate to specific sections within the survey. This feature improves usability by allowing participants to easily access and review specific parts of the survey without scrolling or searching.</inlineHelpText>
    <label>Section Jump Links in Preview</label>
    <type>Checkbox</type>
</CustomField>