force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allow_Multiple_Responses_From_Same_Devic__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_Multiple_Responses_From_Same_Devic__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow the survey to be taken more than once from the same device.</description>
    <inlineHelpText>Enabling this option allows multiple participants to respond to a survey from the same device. With this setting enabled, multiple individuals can use a single device to provide their survey responses.</inlineHelpText>
    <label>Multiple Responses from a Device</label>
    <type>Checkbox</type>
</CustomField>