force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allow_My_Company_User_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_My_Company_User_to_Respond__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to allow your company users to respond a survey sent to your community users.</description>
    <inlineHelpText>Enabling this option allows users from your company, such as service agents, to respond to surveys that are initially intended for community users. This feature enables company users to participate in surveys that are typically targeted towards community users.</inlineHelpText>
    <label>Allow Company Users to Respond</label>
    <type>Checkbox</type>
</CustomField>