force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allow_Only_Specified_File_Types__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_Only_Specified_File_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow only specified file types.</description>
    <inlineHelpText>Enabling this option restricts file uploads to only specified file types. You can specify the file types that are allowed to be uploaded, ensuring that only those designated file types are accepted as survey responses.</inlineHelpText>
    <label>Allow Only Specified File Types</label>
    <type>Checkbox</type>
</CustomField>