force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allow_Responder_to_Collapse_a_Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_Responder_to_Collapse_a_Question__c</fullName>
    <description>When enabled, a responder will be able to collapse a question response area. This improves usability when there are more questions, especially on mobile devices.</description>
    <inlineHelpText>When enabled, responders will have the option to collapse the response area of a question. This feature enhances usability, particularly on mobile devices, by allowing participants to hide the response area for individual questions. This helps improve the overall user experience, especially when there are numerous questions in the survey.</inlineHelpText>
    <label>Collapsible Question Responses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Only on Mobile Devices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>