force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allow_to_Auto_Progress__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_to_Auto_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to show auto advance option for a participant in the survey responder interface.</description>
    <inlineHelpText>When enabled, the survey will automatically advance to the next question after a user selects an answer for a single-select type question. This streamlines the survey-taking experience by eliminating the need for participants to manually navigate to the next question.</inlineHelpText>
    <label>Dep Auto-Advance on Single-Select</label>
    <type>Checkbox</type>
</CustomField>