force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allow_to_Skip_Answered_Questions__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_to_Skip_Answered_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow user to hide answered questions from the response page.</description>
    <inlineHelpText>When enabled, participants have the option to hide questions that they have already answered from the survey response page. This allows participants to focus on unanswered questions and provides a cleaner interface during the response process. Participants can easily toggle the visibility of answered questions as needed.</inlineHelpText>
    <label>Hide Answered Questions</label>
    <type>Checkbox</type>
</CustomField>