force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allow_to_view_submitted_responses__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_to_view_submitted_responses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to allow participants to view completed survey responses.</description>
    <inlineHelpText>Enabling this option allows participants to view their completed survey responses. Once enabled, participants will have the ability to access and review their previously submitted survey responses.</inlineHelpText>
    <label>Viewing of Submitted Responses</label>
    <type>Checkbox</type>
</CustomField>