force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allow_to_view_survey_result__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_to_view_survey_result__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to allow participants to view a completed survey result.</description>
    <inlineHelpText>Enabling this option allows participants to view the completed survey results. Once enabled, participants will have the ability to access and review the aggregated survey results after completing the survey.</inlineHelpText>
    <label>Viewing of Survey Results</label>
    <type>Checkbox</type>
</CustomField>