force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Allowable_Target_Objects__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allowable_Target_Objects__c</fullName>
    <description>API names of the objects that are allowed as the target objects of this survey.</description>
    <inlineHelpText>Specify a comma-separated list of object API names that are allowed as target objects for survey assignment and response mapping.</inlineHelpText>
    <label>Allowable Target Objects</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>