force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Always_Show_View_Response_Link__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Always_Show_View_Response_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the view response link always shows up with Prev/Next/Submit navigation buttons. If disabled, the view response link will be visible only with Submit button, including a terminating thank you question button.</description>
    <inlineHelpText>When enabled, the &quot;Preview Response&quot; link will be displayed along with the navigation buttons (Prev/Next/Submit) in the survey response interface. This allows participants to preview their responses before submitting the survey. Enabling this feature provides participants with an opportunity to review and make any necessary changes to their responses before finalizing their submission.</inlineHelpText>
    <label>Preview Response Link</label>
    <type>Checkbox</type>
</CustomField>