force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Anonymous_Responses__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Anonymous_Responses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling the &quot;Anonymous Responses&quot; setting in this survey ensures that participants can provide feedback without revealing their identities. Regardless of whether they have established identities within your Salesforce org, their responses will remain untraceable, maintaining their anonymity throughout the survey. This setting is important to encourage honest and unbiased feedback, especially when dealing with sensitive or personal topics.</description>
    <inlineHelpText>Enabling the &quot;Anonymous Responses&quot; setting in this survey ensures that participants can provide feedback without revealing their identities. Regardless of whether they have established identities within your Salesforce org, their responses will remain untraceable, maintaining their anonymity throughout the survey. This setting is important to encourage honest and unbiased feedback, especially when dealing with sensitive or personal topics.</inlineHelpText>
    <label>Anonymous Responses</label>
    <type>Checkbox</type>
</CustomField>