force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Answer_Choices_Opacity__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Choices_Opacity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Setup answer choices opacity in scale of 0 to 1</description>
    <inlineHelpText>Specify the opacity level for the answer choices in the survey response. Use a scale of 0 to 1 to adjust the transparency of the answer choices. This allows you to control the visibility and visual presentation of the answer options, creating a desired effect for the survey interface.</inlineHelpText>
    <label>Answer Choices Opacity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>