force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Archive_Policy_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Archive_Policy_Configuration__c</fullName>
    <description>Stores survey response archive policy configuration.</description>
    <inlineHelpText>Stores survey response archive policy configuration.</inlineHelpText>
    <label>Archive Policy Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>