force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Assigned_to_Contact_as_Assigned_To_User__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assigned_to_Contact_as_Assigned_To_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a survey is send to a community/site contact, enable this option to link the community user as assigned to user.</description>
    <inlineHelpText>When a survey is sent to a contact within a community or site, enabling this option allows you to automatically link the community user associated with that contact as the assigned user for the survey. This helps in assigning the survey responses to the appropriate user within the community or site, facilitating efficient tracking and management of the survey data.</inlineHelpText>
    <label>Link Community User as Assigned User</label>
    <type>Checkbox</type>
</CustomField>