force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Assigned_to_Contact_as_Target_Contact__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assigned_to_Contact_as_Target_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a survey is assigned to a contact, enable to link the contact as the target contact.</description>
    <inlineHelpText>When a survey is assigned to a contact, enabling this option allows you to automatically link the contact as the target contact for the survey.</inlineHelpText>
    <label>Link Assigned Contact as Target Contact</label>
    <type>Checkbox</type>
</CustomField>