force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Assigned_to_Email_as_Target_Contact__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assigned_to_Email_as_Target_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a survey is assigned to an email, enable to find and link the contact as the target contact. If there are multiple contacts with the same email, it will randomly pick one.</description>
    <inlineHelpText>When a survey is assigned to an email, enabling this option allows you to automatically link the contact associated with that email as the target contact for the survey. If there are multiple contacts with the same email, the system will randomly select one of them.</inlineHelpText>
    <label>Link Assigned to Email as Target Contact</label>
    <type>Checkbox</type>
</CustomField>