force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Auto_Advance_on_Single_Select__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Auto_Advance_on_Single_Select__c</fullName>
    <description>Enable to show auto advance option for a participant in the survey responder
        interface.</description>
    <inlineHelpText>Choose how the survey navigates when a single-choice question is answered:
        Disabled - The survey responder remains on the same question and must manually advance.
        Enabled - Always Auto Advance - Automatically moves to the next question after a selection
        is made. Enabled - Auto Advance with Responder Override - Allows the survey participaints to
        decide whether questions advance automatically or require manual advancement.</inlineHelpText>
    <label>Auto-Advance on Single-Select</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
                <default>true</default>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>Enabled - Always Auto Advance</fullName>
            </value>
            <value>
                <fullName>Enabled - Auto Advance with Responder Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>