force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Auto_Save_Inactivity_Period__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Auto_Save_Inactivity_Period__c</fullName>
    <description>To activate auto-save during periods of inactivity, input a duration in seconds greater than 0. Please be aware that the system also automatically saves survey participants&apos; responses on next/previous/submit navigation button clicks.</description>
    <inlineHelpText>To activate auto-save during periods of inactivity, input a duration in seconds greater than 0. Please be aware that the system also automatically saves survey participants&apos; responses on next/previous/submit navigation button clicks.</inlineHelpText>
    <label>Auto-Save Inactivity Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>