force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Average_Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Average_Score_Percentage__c</fullName>
    <description>Average of the percentage score of all the submitted surveys.</description>
    <inlineHelpText>Average percentage score of all submitted responses for the survey.</inlineHelpText>
    <label>Average Score (Percentage)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>