force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Average_Score_Raw__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Average_Score_Raw__c</fullName>
    <description>Average raw score of all the submitted surveys.</description>
    <inlineHelpText>Average raw score of all submitted responses for the survey.</inlineHelpText>
    <label>Average Score (Raw)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>