force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Average_Time_Taken_Minutes__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Average_Time_Taken_Minutes__c</fullName>
    <description>Average time taken to complete the submitted surveys.</description>
    <inlineHelpText>Average time taken by a participant to complete the survey.</inlineHelpText>
    <label>Average Time Taken (Minutes)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>