force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Background_Image__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Background_Image__c</fullName>
    <description>Background image to be used during survey response.</description>
    <inlineHelpText>Specify a background image to be displayed in the survey response interface. This customization option allows you to enhance the visual aesthetics of the survey by adding a visually appealing background image. Choose an image that aligns with your branding or the theme of the survey to create a more engaging and immersive experience for participants.</inlineHelpText>
    <label>Background Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>