force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Background_Image_Blur__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Background_Image_Blur__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Set image blurriness.</description>
    <inlineHelpText>Choose the level of image blurriness for the background image in the survey response interface. Use a scale of 0 to 20, where 0 indicates no blurriness and 20 indicates maximum blurriness. Adjusting the image blur can add an aesthetic effect to the background image and create a visually pleasing atmosphere for survey participants.</inlineHelpText>
    <label>Background Image Blur</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>